--- a/index.html
+++ b/index.html
@@ -1,20 +1,52 @@
 <!DOCTYPE html> 
-<html> 
+<html lang="en"> 
 	
 	
 	<head> 
-		
-		<title></title>
+    <meta name="description" content="This is my first website"> 
+
+    <meta name="keywords" content="hairdresser edinburgh, students, college">
+
+    <meta charset="UTF-8"> 
+    
+		<title>About Me</title>
 		
 	</head> 
 	
 	
 	<body> 
 	
-		<h1>heading</h1>
-		<p>hello</p>
-		<p>I made changes</p>
-		
+		<h1>About Me</h1>
+		<p>My name is Blair Ritchie, I live in South Queensferry. I attend Sighthill college and do software development, when i am not at college I am usually at morrisons in the gyle working as a customer assistant. In my spare time I like to go to the gym and go to Hibs games. </p>
+
+    <h1>My Picture</h1>
+
+    <img src="pingu.jpg" width="400px">
+<h1>My friends</h1>
+    <ul>
+      <li>Jack</li>
+      <li>Matty</li>
+      <li>Ciaran</li>
+      <li>Cammi</li>
+      <li>Murray</li>
+      <li>Kirean</li>
+      <li>Jamie</li>
+    </ul>
+<h1>My Favourite Cites</h1>
+    <table border="1">
+    <tr>
+      <td>Country</td>
+      <td>City</td>
+    </tr>
+    <tr>
+      <td>USA</td>
+      <td>New York</td>
+    </tr>
+      <tr>
+        <td>Scotland</td>
+        <td>Edinburgh</td>
+      </tr>
+    
 	</body> 
 	
 </html> 
