Added new section

--- a/index.html
+++ b/index.html
@@ -15,23 +15,28 @@
 	
 	
 	<body> 
-	
+	<div style="background-color: red;">
 		<h1>About Me</h1>
-		<p>My name is Blair Ritchie, I live in South Queensferry. I attend Sighthill college and do software development, when i am not at college I am usually at morrisons in the gyle working as a customer assistant. In my spare time I like to go to the gym and go to Hibs games. </p>
-
+		<p>My name is Blair Ritchie, I live in South Queensferry. I attend Sighthill college and study software development, when i am not at college I am usually at morrisons in the gyle working as a customer assistant. In my spare time I like to go to the gym and go to Hibs games. </p>
+  </div>
+    <div style="background-color:deepskyblue">
     <h1>My Picture</h1>
 
     <img src="pingu.jpg" width="400px">
+    </div>
+    <div style=background-color:gold>
 <h1>My friends</h1>
     <ul>
       <li>Jack</li>
       <li>Matty</li>
       <li>Ciaran</li>
-      <li>Cammi</li>
+      <li>Cammy</li>
       <li>Murray</li>
       <li>Kirean</li>
       <li>Jamie</li>
     </ul>
+    </div>
+    <div style="background-color:limegreen;">
 <h1>My Favourite Cites</h1>
     <table border="1">
     <tr>
@@ -46,8 +51,12 @@
         <td>Scotland</td>
         <td>Edinburgh</td>
       </tr>
-    
+    </table>
+    </div>
+<a href="mygroup.html">MY group</a>
+  
 	</body> 
+  
 	
 </html> 
 	 
