Made 2 new HTML

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div style="background-color:deepskyblue">
     <h1>My Picture</h1>
 
-    <img src="pingu.jpg" width="400px">
+    <img src="Images/pingu.jpg" width="400px">
     </div>
     <div style=background-color:gold>
 <h1>My friends</h1>
@@ -53,9 +53,15 @@
       </tr>
     </table>
     </div>
-<a href="mygroup.html">MY group</a>
-  
-	</body> 
+    <div>
+<a href="mygroup.html">My Group</a> </div>
+    <div>
+  <a href="mytown.html"> My Town</a>
+    </div>
+    <div>
+      <a href="Contact.html"> Contact Me</a>
+    </div>
+  </body> 
   
 	
 </html> 
