--- a/Contact.html
+++ b/Contact.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+  <link rel="stylesheet" href="style.css">
 <div style="background-color:limegreen;">
   <h1>Contact Me</h1>
   <a herf="https://www.facebook.com/" targe="_blank"> <img src="Images/facebook.jpg" width="30px"> </a>
