--- a/mygroup.html
+++ b/mygroup.html
@@ -12,8 +12,10 @@
 	
 	
 	<body> 
-    <div>
-    <h1>My Group</h1>
+    <link rel="stylesheet" href="style.css">
+    
+    <div style="background-color:#D9D6D2;">
+    <h1 class="black">My Group</h1>
 <table border="2"
   <tr>
     <td>First Name</td>
