--- a/mytown.html
+++ b/mytown.html
@@ -11,6 +11,8 @@
 	
 	
 	<body> 
+    <link rel="stylesheet" href="style.css">
+    
 	<div style="background-color: lightcyan;">
 <h1>About South Queensferry</h1>
    <p>My home town South Queensferry is a very small town located West side of Edinburgh next to the seaside. "The Ferry" is famousley known for the 3 bridges that cross the river Forth</p> </div> 
