--- a/index.html
+++ b/index.html
@@ -8,24 +8,26 @@
     <meta name="keywords" content="hairdresser edinburgh, students, college">
 
     <meta charset="UTF-8"> 
-    
-		<title>About Me</title>
+
+    <link rel="stylesheet" href="style.css">
+		
+    <title>About Me</title>
 		
 	</head> 
 	
 	
 	<body> 
-	<div style="background-color: red;">
-		<h1>About Me</h1>
+	<div style="background-color:beige;">
+		<h1 class="black">About Me</h1>
 		<p>My name is Blair Ritchie, I live in South Queensferry. I attend Sighthill college and study software development, when i am not at college I am usually at morrisons in the gyle working as a customer assistant. In my spare time I like to go to the gym and go to Hibs games. </p>
   </div>
-    <div style="background-color:deepskyblue">
-    <h1>My Picture</h1>
+    <div style="background-color:beige;">
+    <h1 class="black">My Picture</h1>
 
     <img src="Images/pingu.jpg" width="400px">
     </div>
-    <div style=background-color:gold>
-<h1>My friends</h1>
+    <div style=background-color:grey>
+<h1 class="cream" >My friends</h1>
     <ul>
       <li>Jack</li>
       <li>Matty</li>
@@ -37,7 +39,7 @@
     </ul>
     </div>
     <div style="background-color:limegreen;">
-<h1>My Favourite Cites</h1>
+<h1 class="cream">My Favourite Cites</h1>
     <table border="1">
     <tr>
       <td>Country</td>
