Added CSS and NAV menu

--- a/index.html
+++ b/index.html
@@ -10,23 +10,34 @@
     <meta charset="UTF-8"> 
 
     <link rel="stylesheet" href="style.css">
-		
+		    <nav>
+
+     <ul>
+       <li><a href="mygroup.html">My Group</a></li>
+       <li><a href="mytown.html">My Town</a></li>
+       <li><a href="Contact.html">Contact Me</a></li>
+       <li><a href="index.html">Homepage</a></li>
+     </ul> 
+    
+    </nav>
     <title>About Me</title>
 		
 	</head> 
 	
 	
 	<body> 
-	<div style="background-color:beige;">
+	<div class="bg-blue">
 		<h1 class="black">About Me</h1>
-		<p>My name is Blair Ritchie, I live in South Queensferry. I attend Sighthill college and study software development, when i am not at college I am usually at morrisons in the gyle working as a customer assistant. In my spare time I like to go to the gym and go to Hibs games. </p>
+	
+    <p>My name is Blair Ritchie, I live in South Queensferry. I attend Sighthill college and study software development, when i am not at college I am usually at morrisons in the gyle working as a customer assistant. In my spare time I like to go to the gym and go to Hibs games. </p>
+  
   </div>
-    <div style="background-color:beige;">
+    <div class="bg-lightblue">
     <h1 class="black">My Picture</h1>
 
     <img src="Images/pingu.jpg" width="400px">
     </div>
-    <div style=background-color:grey>
+    <div class="bg-cream">
 <h1 class="cream" >My friends</h1>
     <ul>
       <li>Jack</li>
@@ -38,7 +49,7 @@
       <li>Jamie</li>
     </ul>
     </div>
-    <div style="background-color:limegreen;">
+    <div class="bg-green">
 <h1 class="cream">My Favourite Cites</h1>
     <table border="1">
     <tr>
@@ -55,14 +66,7 @@
       </tr>
     </table>
     </div>
-    <div>
-<a href="mygroup.html">My Group</a> </div>
-    <div>
-  <a href="mytown.html"> My Town</a>
-    </div>
-    <div>
-      <a href="Contact.html"> Contact Me</a>
-    </div>
+    
   </body> 
   
 	
