--- a/Contact.html
+++ b/Contact.html
@@ -5,10 +5,19 @@
 
 <title> Lesson 3</title>
 </head>
+    <nav>
 
+     <ul>
+       <li><a href="mygroup.html">My Group</a></li>
+       <li><a href="mytown.html">My Town</a></li>
+       <li><a href="Contact.html">Contact Me</a></li>
+       <li><a href="index.html">Homepage</a></li>
+     </ul> 
+    
+    </nav>
 <body>
   <link rel="stylesheet" href="style.css">
-<div style="background-color:limegreen;">
+<div class="bg-blue">
   <h1>Contact Me</h1>
   <a herf="https://www.facebook.com/" targe="_blank"> <img src="Images/facebook.jpg" width="30px"> </a>
       <a href="tel:0131555666">
