--- a/mygroup.html
+++ b/mygroup.html
@@ -9,7 +9,16 @@
     
 		
 	</head> 
-	
+	    <nav>
+
+     <ul>
+       <li><a href="mygroup.html">My Group</a></li>
+       <li><a href="mytown.html">My Town</a></li>
+       <li><a href="Contact.html">Contact Me</a></li>
+       <li><a href="index.html">Homepage</a></li>
+     </ul> 
+    
+    </nav>
 	
 	<body> 
     <link rel="stylesheet" href="style.css">
