--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
 	
 	
 	<body> 
-	<div class="bg-blue">
+	<div class="bg-green">
 		<h1 class="black">About Me</h1>
 	
     <p>My name is Blair Ritchie, I live in South Queensferry. I attend Sighthill college and study software development, when i am not at college I am usually at morrisons in the gyle working as a customer assistant. In my spare time I like to go to the gym and go to Hibs games. </p>
   
   </div>
-    <div class="bg-lightblue">
+    <div class="bg-green">
     <h1 class="black">My Picture</h1>
 
     <img src="Images/pingu.jpg" width="400px">
     </div>
-    <div class="bg-cream">
+    <div class="bg-green">
 <h1 class="cream" >My friends</h1>
     <ul>
       <li>Jack</li>
@@ -66,7 +66,11 @@
       </tr>
     </table>
     </div>
-    
+
+    <footer>
+<p>Copyright BlairRitchie @ 2023<BR> 
+<a href="blair808@icloud.com">blair808@icloud.com</a></p>
+    </footer>
   </body> 
   
 	
