changed colours and added meta tags to all pages

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta charset="UTF-8"> 
 
     <link rel="stylesheet" href="style.css">
-		    <nav>
-
+		   
+    <nav>
      <ul>
        <li><a href="mygroup.html">My Group</a></li>
        <li><a href="mytown.html">My Town</a></li>
@@ -33,12 +33,12 @@
   
   </div>
     <div class="bg-green">
-    <h1 class="black">My Picture</h1>
+    <h1 class="black" >My Picture</h1>
 
     <img src="Images/pingu.jpg" width="400px">
     </div>
     <div class="bg-green">
-<h1 class="cream" >My friends</h1>
+<h1>My friends</h1>
     <ul>
       <li>Jack</li>
       <li>Matty</li>
@@ -50,7 +50,7 @@
     </ul>
     </div>
     <div class="bg-green">
-<h1 class="cream">My Favourite Cites</h1>
+<h1 class=>My Favourite Cites</h1>
     <table border="1">
     <tr>
       <td>Country</td>
