--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
 	
 	<body> 
 	<div class="bg-green">
-		<h1 class="black">About Me</h1>
+		<h1 class="bg-white">About Me</h1>
 	
-    <p>My name is Blair Ritchie, I live in South Queensferry. I attend Sighthill college and study software development, when i am not at college I am usually at morrisons in the gyle working as a customer assistant. In my spare time I like to go to the gym and go to Hibs games. </p>
+    <p class= "bg-white">My name is Blair Ritchie, I live in South Queensferry. I attend Sighthill college and study software development, when i am not at college I am usually at morrisons in the gyle working as a customer assistant. In my spare time I like to go to the gym and go to Hibs games. </p>
   
   </div>
     <div class="bg-green">
-    <h1 class="black" >My Picture</h1>
+    <h1 class="bg-white" >My Picture</h1>
 
     <img src="Images/pingu.jpg" width="400px">
     </div>
     <div class="bg-green">
-<h1>My friends</h1>
-    <ul>
+<h1 class="bg-white">My friends</h1>
+    <ul class="bg-white">
       <li>Jack</li>
       <li>Matty</li>
       <li>Ciaran</li>
@@ -50,8 +50,8 @@
     </ul>
     </div>
     <div class="bg-green">
-<h1 class=>My Favourite Cites</h1>
-    <table border="1">
+<h1 class="bg-white">My Favourite Cites</h1>
+    <table border="1" class= "bg-white">
     <tr>
       <td>Country</td>
       <td>City</td>
