--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div class="bg-green">
 		<h1 class="bg-white">About Me</h1>
 	
-    <p class= "bg-white">My name is Blair Ritchie, I live in South Queensferry. I attend Sighthill college and study software development, when i am not at college I am usually at morrisons in the gyle working as a customer assistant. In my spare time I like to go to the gym and go to Hibs games. </p>
+    <p class= "bg-white">My name is Blair Ritchie, I live in South Queensferry. I attend Sighthill college and study software development, when i am not at college I am usually at morrisons in the gyle working as a customer assistant. In my spare time I like to go to the gym and go to Hibernian FC games. </p>
   
   </div>
     <div class="bg-green">
