--- a/mytown.html
+++ b/mytown.html
@@ -30,7 +30,7 @@
     
 	<div class="bg-green">
 <h1 class="bg-white" >About South Queensferry</h1>
-   <p class="bg-white" >My home town South Queensferry is a very small town located West side of Edinburgh next to the seaside. "The Ferry" is famousley known for the 3 bridges that cross the river Forth</p> </div> 
+   <p class="bg-white" >My home town South Queensferry is a small sea side town located to the west side of Edinburgh . "The Ferry" is famousley known for the 3 bridges that cross the river Forth: The Forth Bridge, The Forth Road Bridge and The Queensferry Crossing. </p> </div> 
     <div class="bg-green">
     <h1 class= "bg-white">Picture of Ferry</h1>
       <img src="Images/South Queensferry.jpg" width="500px">
