--- a/Contact.html
+++ b/Contact.html
@@ -3,11 +3,13 @@
 
 <head>
 
-<meta name="description" content="This is my first website"> 
+    <meta name="description" content="This is my first website"> 
 
     <meta name="keywords" content="hairdresser edinburgh, students, college">
 
     <meta charset="UTF-8"> 
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
 <title>Contact Me</title>
 </head>
@@ -25,15 +27,15 @@
   <link rel="stylesheet" href="style.css">
   
 <div class="bg-green">
-  <h1 class="bg-white">Contact Me</h1>
+  <h1 class="bg-black">Contact Me</h1>
   <a herf="https://www.facebook.com/" targe="_blank"> <img src="Images/facebook.jpg" width="30px"> </a>
       <a href="tel:0131555666">
         <img src="Images/phone.jpg" width="30px" </a> <img src="Images/mail.jpg" width="30px"> </a> </div>
   <div class="bg-green">
-  <h2 class="bg-white">Location</h2>
+  <h2 class="bg-black">Location</h2>
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2233.864541882331!2d-3.2005299582155495!3d55.95171967327026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4887c790c4e3099b%3A0xb025a322e3754cb5!2sPrinces%20St%2C%20Edinburgh!5e0!3m2!1sen!2suk!4v1694769565619!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> </div>
 <div class="bg-green">
-<h2 class="bg-white">Contact Form</h2>
+<h2 class="bg-black">Contact Form</h2>
   <form>  
   <label for="fname">First name:</label>
   <br> <input type="text" id="fname" name="fname"><br>
