--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <meta name="keywords" content="hairdresser edinburgh, students, college">
 
     <meta charset="UTF-8"> 
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
 		   
@@ -30,21 +32,21 @@
 	</head> 
 	
 	
-	<body> 
+	<body>
 	<div class="bg-green">
-		<h1 class="bg-white">About Me</h1>
+		<h1 class="bg-black">About Me</h1>
 	
-    <p class= "bg-white">My name is Blair Ritchie, I live in South Queensferry. I attend Sighthill college and study software development, when i am not at college I am usually at morrisons in the gyle working as a customer assistant. In my spare time I like to go to the gym and go to Hibernian FC games. </p>
+    <p class= "bg-black">My name is Blair Ritchie, I live in South Queensferry. I attend Sighthill college and study software development, when i am not at college I am usually at morrisons in the gyle working as a customer assistant. In my spare time I like to go to the gym and go to Hibernian FC games. </p>
   
   </div>
     <div class="bg-green">
-    <h1 class="bg-white" >My Picture</h1>
+    <h1 class="bg-black" >My Picture</h1>
 
     <img src="Images/pingu.jpg" width="400px">
     </div>
     <div class="bg-green">
-<h1 class="bg-white">My friends</h1>
-    <ul class="bg-white">
+<h1 class="bg-black">My friends</h1>
+    <ul class="bg-black">
       <li>Jack</li>
       <li>Matty</li>
       <li>Ciaran</li>
@@ -55,8 +57,8 @@
     </ul>
     </div>
     <div class="bg-green">
-<h1 class="bg-white">My Favourite Cites</h1>
-    <table border="1" class= "bg-white">
+<h1 class="bg-black">My Favourite Cites</h1>
+    <table border="1" class= "bg-black">
     <tr>
       <td>Country</td>
       <td>City</td>
