--- a/Contact.html
+++ b/Contact.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html> 
 <html>
 
-<head>
+<head <script scr=https//kit.fontawesome.com/12cc7ca56e.js" crossorigin="anonymous"></script>
+  
 
     <meta name="description" content="This is my first website"> 
 
@@ -60,6 +61,20 @@
       <input type="submit" value="submit"> </form>
 </form> </div>
 
+  <div class="bg-green">
+<div class="row">
+  <div class="column">
+    <h2>Contact me</h2>
+    <p>College email: ec2246379@edinburghcollege.ac.uk</p>
+  </div>
+  
+  <div class="column">
+    <h2>Contact me</h2>
+    <p>personal email: blair808@icloud.com</p>
+  </div>
+</div>
+  </div>
+  
    <footer>
 <p>Copyright BlairRitchie @ 2023<BR> 
 <a href="blair808@icloud.com">blair808@icloud.com</a></p>
