--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 	
 	
 	<head> 
+  <script scr=https//kit.fontawesome.com/12cc7ca56e.js" crossorigin="anonymous"> </script> 
 
+    
    <nav>
      <ul>
        <li><a href="mygroup.html">My Group</a></li>
@@ -74,6 +76,33 @@
     </table>
     </div>
 
+</style>
+</head>
+
+<div class="bg-green">
+<div class="row">
+  <div class="column">
+    <h2>Edinburgh</h2>
+    <p>Edinburgh is the capital city of Scotland located in the region Lothian, Edinburgh is home to Murrayfield the rugby Scotland national team, there are many things to do in Edinburgh for example visiting rich and historic landmarks, going shopping in the new St James Centre, the best thing however in my opinion is to go to Easter Road on a saturday evening and watch Hibernian FC as they are the biggest in Edinburgh. </p>
+  </div>
+  
+  <div class="column">
+    <h2>Glasgow</h2>
+    <p>Glasgow is the biggest city in population, Glasgow is home to hampden park the Scotland Football national team. In Glasgow there are multiple things to do go out to one of the many clubs and go to the TRNSMT festival. </p>
+  </div>
+  
+  <div class="column" >
+    <h2>Dundee</h2>
+    <p>Dundee is home to Dundee FC and Dundee United, these two teams are bitter rivals, there home stadiums are only 183 meters apart making them have the closest football stadiums in the UK.  </p>
+  </div>
+  
+  <div class="column">
+    <h2>Aberdeen</h2>
+    <p>Aberdeen is a city in the North East of Scotland. Aberdeen is the third largest city in Scotland, Aberdeen was once the oil capital of Europe. In aberdeen there are many things to do such as surf in the North sea, visit the art gallery and paddle a canoe around Rubislaw quarry.  </p>
+  </div>
+</div>
+</div>
+    
     <footer>
 <p>Copyright BlairRitchie @ 2023<BR> 
 <a href="blair808@icloud.com">blair808@icloud.com</a></p>
