--- a/mygroup.html
+++ b/mygroup.html
@@ -2,8 +2,7 @@
 <html> 
 	
 	
-	<head> 
-
+	<head> <script scr= "https//kit.fontawesome.com/12cc7ca56e.js" crossorigin="anonymous"> </script>
     <meta name="description" content="This is my first website"> 
 
     <meta name="keywords" content="hairdresser edinburgh, students, college">
@@ -72,39 +71,33 @@
         <li>Nandos</li>
       </ul>
     </div>
-
-    <div class="bg-green" color="bg-white"> 
-    <h2 class="bg-black">Kyrylo Fedorenko</h2>
-      <a herf="https://www.facebook.com/" targe="_blank"> <img src="Images/facebook.jpg" width="30px"> </a>
-         <a href="tel:0131555666">
-        <img src="Images/phone.jpg" width="30px" </a> 
-      <a href="mailto:Kyrylo@gmail.com">
-        <img src="Images/mail.jpg" width="30px"></a>
-      <h2 class="bg-white">Kyrylo`s Dogs Sonya</h2>
-    <img src="Images/Sonya.jfif" width=400px>
-      <h2 class="bg-black" >Kyrylos favourite Things</h2>
-      <ul class="bg-black">
-        <li>Fight Club</li>
-        <li>Ramen</li>
-        <li>Kharkiv / Edinburgh</li>
-      </ul>  
-    </div>
     
-    <div class ="bg-green">
-      <h1 class="bg-black">Kermit The Frog</h1>
-      <a herf="https://www.facebook.com/" targe="_blank"> <img src="Images/facebook.jpg" width="30px"> </a>
-         <a href="tel:0131555666">
-        <img src="Images/phone.jpg" width="30px" </a> 
-      <a href="mailto:Kermit@gmail.com">
-        <img src="Images/mail.jpg" width="30px"></a>
-      <h1 class="bg-black" >Kermit`s Wife</h1>
-      <img src="Images/Kermit wife.jfif" width=400px>
-      <h1 class="bg-black">Kermit`s Favourite Things</h1>
-      <ul class="bg-black">
+
+    <div class="bg-green">
+  <div class="row">
+  <div class="column">
+    <h2>Kermit The Frog</h2>
+          <ul>
         <li>Singing with the Muppets</li>
         <li>Eating Flies</li>
         <li>His Home town Sesame Street</li>
       </ul>  
+    <h2 class="bg-black">Kermit's wife </h2>
+    <img src="Images/Kermit wife.jfif" width=200px>
+    <i class="fa-brands fa-square-facebook"></i>
+  </div>
+  
+  <div class="column">
+    <h2>Kyrylo Fedorenko</h2>
+        <li>Fight Club</li>
+        <li>Ramen</li>
+        <li>Kharkiv / Edinburgh</li>
+      </ul>  
+    <h2 class="bg-black">Kyrylo`s Dogs Sonya</h2>
+    <img src="Images/Sonya.jfif" width=200px>
+  
+  </div>
+  </div>
     </div>
        <footer>
 <p>Copyright BlairRitchie @ 2023<BR> 
